FIX: Correccion css para movil y eliminacion de archivos innecesarios

--- a/docs/style.css
+++ b/docs/style.css
@@ -405,6 +405,7 @@ body {
 
 .install-card {
     background: white;
+    display: grid;
     padding: 30px;
     border-radius: var(--border-radius);
     box-shadow: var(--shadow);
